Add executor callable versions and fix some printstacktrace warnings